# pinyin.rs

./: .cursorrules  .gitignore  Cargo.toml  IMPROVEMENTS.md  LICENSE  Makefile  PERFORMANCE_REPORT.md  README.md  RELEASE_GUIDE.md  benchmark_test.rs  build.rs
.github/workflows/: ci.yml  release.yml
benches/: benchmark.rs  loader_benchmark.rs  longtext_benchmark.rs  performance.rs
data/: chars.txt  chars_0.txt  chars_1.txt  chars_2.txt  chars_3.txt  chars_4.txt  chars_5.txt  chars_6.txt  chars_7.txt  chars_8.txt  chars_9.txt  heteronyms.txt  surnames.txt  words_0.txt  words_1.txt  words_10.txt  words_2.txt  words_3.txt  words_4.txt  words_5.txt  words_6.txt  words_7.txt  words_8.txt  words_9.txt
docs/: API.md  GITHUB_ACTIONS_SETUP.md
examples/: advanced_usage.rs  basic_usage.rs  converter.rs  longtext_performance.rs  new_api_demo.rs
scripts/: benchmark.sh  build.sh
sources/: chars.txt  words.txt
sources/pathes/: chars.txt  test.txt
src/: converter.rs  error.rs  lib.rs  loader.rs  main.rs  matcher.rs  pinyin.rs
